src/objects/Personal_Event__c.object
<CustomObject>
    <description>Used to store things like vacation, no travel, OOO, etc.</description>
    <fields>
        <fullName>End__c</fullName>
        <label>End</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <label>Event Type</label>
        <picklist>
            <picklistValues>
                <fullName>No Travel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out Of Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vacation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start__c</fullName>
        <label>Start</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Confirmed</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Tentative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Will save for the currently logged in user if not set.</inlineHelpText>
        <label>Who</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Personal_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Personal Event</label>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Personal Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Ordered_Dates</fullName>
        <active>true</active>
        <description>Make sure the end date is after the start date (or equal)</description>
        <errorConditionFormula>Start__c &gt; End__c</errorConditionFormula>
        <errorDisplayField>End__c</errorDisplayField>
        <errorMessage>The End date cannot be before the Start date.</errorMessage>
    </validationRules>
</CustomObject>